# openai

./: .gitignore  README.md
docserve/: MANIFEST.in  Makefile  README.md  pyproject.toml  upgrade-docserve.sh
docserve/docserve/: docserve.service  document.py  ex_api.py  instructions.txt  notes.txt  requirements.txt  schema.sql  server.py  storage.py
docserve/docserve/templates/: list.html  upload.html  view.html
gen-thoughts/: genthought.py  genthought_test.py  run.sh
hangman/: MANIFEST.in  README.md  pyproject.toml
hangman/hangman/: chat.py  hangman.py  hangman_test.py  server.py
hangman/hangman/static/: ai-plugin.json  openapi.json  privacy
scripts/: audio.sh  dalle-images.sh  embed-long.sh  image-prompt.sh  image-variation.sh  list-models.sh  query.sh  sunset-image.sh
